--- a/server/study-core_ang_ef_2021/study.API/appsettings.Development.json
+++ b/server/study-core_ang_ef_2021/study.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=Study.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
