--- a/server/study-core_ang_ef_2021/study.API/study.API.csproj
+++ b/server/study-core_ang_ef_2021/study.API/study.API.csproj
@@ -18,4 +18,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\study.Application\study.Application.csproj" />
+  </ItemGroup>
+
 </Project>
