feat: refactor domain and create repository with migrations

--- a/server/study-core_ang_ef_2021/study.API/study.API.csproj
+++ b/server/study-core_ang_ef_2021/study.API/study.API.csproj
@@ -22,4 +22,8 @@
     <ProjectReference Include="..\study.Application\study.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\" />
+  </ItemGroup>
+
 </Project>
